--- a/client/assets/partials/checkOut.html
+++ b/client/assets/partials/checkOut.html
@@ -31,7 +31,7 @@
 
 	<div class="second_cart">
 		<h3 style="text-align: center;"><u>My Cart</u></h3>
-		<div ng-repeat = "cart in CC.allProducts" ng-show="CC.flag" class="cart_product2">
+		<div ng-repeat = "cart in CC.allProducts" class="cart_product2">
 			
 			<img ng-src="{{cart.product_imageUrl}}">
 			<div class="product_desc2">
